--- a/index.html
+++ b/index.html
@@ -140,17 +140,6 @@
                             <li class="scrollToLink"><a href="#team">Contacto</a></li>
                         </ul>
                     </div><!-- /.main-menu__nav -->
-                    <div class="main-menu__right">
-                        <a href="#" class="main-menu__toggler mobile-nav__toggler">
-                            <i class="fa fa-bars"></i>
-                        </a><!-- /.mobile menu btn -->
-                        <a href="#" class="main-menu__search search-toggler">
-                            <i class="icon-magnifying-glass"></i>
-                        </a><!-- /.search btn -->
-                        <a href="cart.html" class="main-menu__cart cart-toggler">
-                            <i class="icon-shopping-cart"></i>
-                        </a><!-- /.cart btn -->
-                    </div><!-- /.main-menu__right -->
                 </div><!-- /.container -->
             </nav>
             <!-- /.main-menu -->
@@ -160,21 +149,21 @@
             <div class="sticky-header__content"></div><!-- /.sticky-header__content -->
         </div><!-- /.stricky-header -->
 
-        <!--Main Slider Start-->
-        <section class="main-slider">
+         <!--Main Slider Start-->
+         <section class="main-slider">
             <div class="main-slider__two ogency-owl__carousel owl-carousel" data-owl-options='{
-        "loop": true,
-        "animateOut": "slideOutDown",
-        "animateIn": "fadeIn",
-        "items": 1,
-        "autoplay": 6000,
-        "autoplayTimeout": 7000,
-        "smartSpeed": 1000,
-        "nav": false,
-        "navText": ["<span class=\"icon-left-arrow\"></span>","<span class=\"icon-right-arrow\"></span>"],
-        "dots": true,
-        "margin": 0
-        }'>
+                        "loop": true,
+                        "animateOut": "slideOutDown",
+                        "animateIn": "fadeIn",
+                        "items": 1,
+                        "autoplay": 6000,   
+                        "autoplayTimeout": 7000,
+                        "smartSpeed": 1000,
+                        "nav": false,
+                        "navText": ["<span class=\"icon-left-arrow\"></span>","<span class=\"icon-right-arrow\"></span>"],
+                        "dots": true,
+                        "margin": 0
+                        }'>
                 <div class="item">
                     <!-- slider item start -->
                     <div class="main-slider__two__item">
@@ -205,7 +194,7 @@
                     <!-- slider item start -->
                     <div class="main-slider__two__item">
                         <!-- bg image start -->
-                        <div class="main-slider__two__bg" style="background-image: url(assets/images/backgrounds/page-header-bg-1-2.jpg);"></div>
+                        <div class="main-slider__two__bg" style="background-image: url(assets/images/backgrounds/page-header-bg-1-1.jpg);"></div>
                         <!-- bg image end -->
                         <!-- bg image overlay start -->
                         <div class="main-slider__two__overlay" style="background-image: url(assets/images/backgrounds/slider-2-bg-overlay.png);"></div>
@@ -216,22 +205,22 @@
                                     <div class="main-slider__two__content text-center">
                                         <div class="main-slider__two__dots"><span></span><span></span></div><!-- slider-dots -->
                                         <h2 class="main-slider__two__content__title">
-                                            ESPAÑA EMPRENDE
-                                            <div class="h1">
-                                            </a>Inscripción 2025<a href="about.html" class="main-slider__two__btn"><span class="icon-down-right"></span></a><!-- slider-btn -->
-                                            </div>
+                                            ESPAÑA EMPRENDE <br><br/>
                                         </h2><!-- slider-title -->
+                                        <h3 class="h1">
+                                            Inscripciones 2025
+                                        </h3><!-- slider-title -->
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div><!-- slider item end -->
-                <div class="item">
+                                <div class="item">
                     <!-- slider item start -->
                     <div class="main-slider__two__item">
                         <!-- bg image start -->
-                        <div class="main-slider__two__bg" style="background-image: url(assets/images/backgrounds/page-header-bg-1-3.jpg);"></div>
+                        <div class="main-slider__two__bg" style="background-image: url(assets/images/backgrounds/page-header-bg-1-1.jpg);"></div>
                         <!-- bg image end -->
                         <!-- bg image overlay start -->
                         <div class="main-slider__two__overlay" style="background-image: url(assets/images/backgrounds/slider-2-bg-overlay.png);"></div>
@@ -241,7 +230,12 @@
                                 <div class="col-xl-12">
                                     <div class="main-slider__two__content text-center">
                                         <div class="main-slider__two__dots"><span></span><span></span></div><!-- slider-dots -->
-                                        <h2 class="main-slider__two__content__title">PROGRAMA DE ACELERACIÓN  DE TALENTOS</h2><!-- slider-title -->
+                                        <h2 class="main-slider__two__content__title">
+                                            ESPAÑA EMPRENDE <br><br/>
+                                        </h2><!-- slider-title -->
+                                        <h3 class="h1">
+                                            Inscripciones 2025
+                                        </h3><!-- slider-title -->
                                     </div>
                                 </div>
                             </div>
@@ -251,124 +245,6 @@
             </div>
         </section>
         <!--Main Slider End-->
-
-        <!--Main Slider Start-->
-        <section class="main-slider" id="home">
-            <div class="main-slider__one ogency-owl__carousel owl-carousel" data-owl-options='{
-		"loop": true,
-		"animateOut": "fadeOut",
-		"animateIn": "fadeIn",
-		"items": 1,
-		"autoplay": 6000,
-		"autoplayTimeout": 7000,
-		"smartSpeed": 500,
-		"nav": false,
-		"dots": false,
-		"margin": 0
-	    }'>
-                <div class="item">
-                    <!-- slider item start -->
-                    <div class="main-slider__one-item">
-                        <!-- bg image start -->
-                        <div class="main-slider__one-bg" style="background-image: url(assets/images/backgrounds/slider-1-bg-1.png);"></div>
-                        <!-- bg image end -->
-                        <!-- image-layer start -->
-                        <div class="main-slider__one-item__shape-1">
-                            <img src="assets/images/backgrounds/slider-1-shape-1.jpg" alt="">
-                        </div>
-                        <div class="main-slider__one-item__shape-2">
-                            <img src="assets/images/backgrounds/slider-1-shape-2.jpg" alt="">
-                        </div>
-                        <!-- image-layer end -->
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-xl-8">
-                                    <div class="main-slider__one-item__content">
-                                        <h2>Da tu salto<br> profesional</h2><br></br>
-                                        <h5>Pasa de 0 a 100 en menos de 2 meses con nuestros <br>bootcamps presenciales intensivos 100% subvencionados</h5>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div><!-- slider item end -->
-                <div class="item">
-                    <!-- slider item start -->
-                    <div class="main-slider__one-item">
-                        <!-- bg image start -->
-                        <div class="main-slider__one-bg" style="background-image: url(assets/images/backgrounds/slider-1-bg-1.png);"></div>
-                        <!-- bg image end -->
-                        <!-- image-layer start -->
-                        <div class="main-slider__one-item__shape-1">
-                            <img src="assets/images/backgrounds/slider-1-shape-1.jpg" alt="">
-                        </div>
-                        <div class="main-slider__one-item__shape-2">
-                            <img src="assets/images/backgrounds/slider-1-shape-2.jpg" alt="">
-                        </div>
-                        <!-- image-layer end -->
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-xl-8">
-                                    <div class="main-slider__one-item__content">
-                                        <h2>Programa de aceleración de talentos</h2>
-                                        <a href="about.html" class="main-slider__one-item__content-curved-circle-box">
-                                            <div class="curved-circle">
-                                                <!-- curved-circle start-->
-                                                <span class="curved-circle--item">
-                                                    Saber más Saber más Saber
-                                                </span>
-                                            </div><!-- curved-circle end-->
-                                            <div class="main-slider__one-item__content-arrow-down">
-                                                <span class="icon-down-right"></span>
-                                            </div><!-- curved-circle icon -->
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div><!-- slider item end -->
-            </div>
-            <!-- social start -->
-            <div class="main-slider__socails">
-                <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
-                <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
-                <a href="https://www.pinterest.com/"><i class="fab fa-pinterest-p"></i></a>
-                <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
-            </div>
-            <!-- social end -->
-            <!-- phone start -->
-            <div class="main-slider__phone"><a href="tel:+34 613 64 78 81">+34 613 64 78 81</a></div>
-            <!-- phone end -->
-        </section>
-        <!--Main Slider End-->
-
-        <!-- Video Start-->
-        <section class="video-one">
-            <div class="container">
-                <div class="video-one__banner wow fadeInUp animated animated" data-wow-delay="100ms">
-                    <img src="assets/images/backgrounds/video-bg-1-2.jpg" alt="ogency">
-                    <div class="video-one__banner__shape wow fadeInRight animated animated" data-wow-delay="300ms">
-                        <img src="assets/images/backgrounds/video-bg-shape-1-1.png" alt="ogency">
-                    </div>
-                    <!-- curved-circle start-->
-                    <div class="video-one__banner__curved-circle-box wow fadeInUp animated animated" data-wow-delay="400ms">
-                        <div class="curved-circle">
-                            <span class="curved-circle-item">
-                                Watch&emsp;Our&emsp;agency&emsp;portfolio&emsp;Video
-                            </span>
-                        </div>
-                        <!-- video btn start -->
-                        <a href="https://www.youtube.com/watch?v=Get7rqXYrbQ" class="video-popup">
-                            <span class="fa fa-play"></span>
-                        </a>
-                        <!-- video btn end -->
-                    </div>
-                    <!-- curved-circle end-->
-                </div>
-            </div>
-        </section>
-        <!-- Video Start-->
 
         <div class="client-carousel @@extraClassName">
             <div class="section-title text-center">
