--- a/program.html
+++ b/program.html
@@ -100,7 +100,7 @@
                 <img
                   src="assets/images/logo/phimister_logo.avif"
                   width="350"
-                  height="150"
+                  height="130"
                   alt="Phimister"
                 />
               </a>
@@ -119,7 +119,7 @@
       </div>
       <!-- /.stricky-header -->
       <section class="page-header">
-        <div class="page-header__bg"></div>
+        <div class="page-header__bg" style="background-image: url(assets/images/backgrounds/envato-labs-image-edit.jpg);"></div>
         <!-- /.page-header__bg -->
         <div class="page-header__overlay"></div>
         <!-- /.page-header__bg -->
@@ -591,7 +591,7 @@
                           </div>
                           <!-- video btn start -->
                           <a
-                            href="https://www.youtube.com/watch?v=Get7rqXYrbQ"
+                            href=""
                             class="video-popup"
                           >
                             <span class="icon-down-right"></span>
@@ -623,8 +623,8 @@
             <a href="index.html" class="main-footer__logo">
               <img
                 src="assets/images/logo/phimister_logo.avif"
-                width="262"
-                height="112"
+                width="260"
+                height="105"
                 alt="Phimister"
               /> </a
             ><!-- /.footer-logo -->
