--- a/contact.html
+++ b/contact.html
@@ -61,11 +61,11 @@
                     </div><!-- /.main-menu__logo -->
                     <div class="main-menu__nav">
                         <ul class="main-menu__list one-page-scroll-menu">
-                            <li class="scrollToLink"><a href="/">Home</a></li>
-                            <li class="scrollToLink"><a href="/program.html">Ediciones 2025</a></li>
-                            <li class="scrollToLink"><a href="/talent-list.html">Talent list</a></li>
-                            <li class="scrollToLink"><a href="/blog-grid.html">Blog</a></li>
-                            <li class="scrollToLink"><a href="/contact.html">Contacto</a></li>
+                            <li class="scrollToLink"><a href="#home">Home</a></li>
+                            <li class="scrollToLink"><a href="program.html">Ediciones 2025</a></li>
+                            <li class="scrollToLink"><a href="talent-list.html">Talent list</a></li>
+                            <li class="scrollToLink"><a href="blog-grid.html">Blog</a></li>
+                            <li class="scrollToLink"><a href="contact.html">Contacto</a></li>
                         </ul>
                     </div><!-- /.main-menu__nav -->
                 </div><!-- /.container -->
@@ -214,11 +214,11 @@
                     <div class="col-lg-2 col-md-3 wow fadeInUp animated" data-wow-delay="300ms">
                         <div class="main-footer__navmenu">
                             <ul>
-                                <li class="scrollToLink"><a href="#home">Home</a></li>
-                                <li class="scrollToLink"><a href="program.html">Ediciones 2025</a></li>
-                                <li class="scrollToLink"><a href="talent-list.html">Talent list</a></li>
-                                <li class="scrollToLink"><a href="blog-grid.html">Blog</a></li>
-                                <li class="scrollToLink"><a href="contact.html">Contacto</a></li>
+                                <li><a href="about.html">Sobre nosotros</a></li>
+                                <li><a href="team.html">Conoce al equipo</a></li>
+                                <li><a href="blog-grid-right.html">Blog</a></li>
+                                <li><a href="projects.html">Nuestros programas</a></li>
+                                <li><a href="contact.html">Contacto</a></li>
                             </ul><!-- /.list-unstyled -->
                         </div><!-- /.footer-widget -->
                     </div>
