--- a/blog-grid.html
+++ b/blog-grid.html
@@ -61,11 +61,11 @@
                     </div><!-- /.main-menu__logo -->
                     <div class="main-menu__nav">
                         <ul class="main-menu__list one-page-scroll-menu">
-                            <li class="scrollToLink"><a href="/">Home</a></li>
-                            <li class="scrollToLink"><a href="/program.html">Ediciones 2025</a></li>
-                            <li class="scrollToLink"><a href="/talent-list.html">Talent list</a></li>
-                            <li class="scrollToLink"><a href="/blog-grid.html">Blog</a></li>
-                            <li class="scrollToLink"><a href="/contact.html">Contacto</a></li>
+                            <li class="scrollToLink"><a href="#">Home</a></li>
+                            <li class="scrollToLink"><a href="program.html">Ediciones 2025</a></li>
+                            <li class="scrollToLink"><a href="talent-list.html">Talent list</a></li>
+                            <li class="scrollToLink"><a href="blog-grid.html">Blog</a></li>
+                            <li class="scrollToLink"><a href="contact.html">Contacto</a></li>
                         </ul>
                     </div><!-- /.main-menu__nav -->
                 </div><!-- /.container -->
