asoc-para-talento

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                             <li class="scrollToLink"><a href="talent-list.html">Talent list</a></li>
                             <li class="scrollToLink"><a href="blog-grid.html">Blog</a></li>
                             <li class="scrollToLink"><a href="contact.html">Contacto</a></li>
+                            <li class="scrollToLink"><a href="talent-asoc.html">Asociación para el talento</a></li>
                         </ul>
                     </div><!-- /.main-menu__nav -->
                 </div><!-- /.container -->
