--- a/talent-list.html
+++ b/talent-list.html
@@ -33,7 +33,7 @@
     <link rel="stylesheet" href="assets/vendors/owl-carousel/assets/owl.theme.default.min.css" />
 
     <!-- template styles -->
-    <link rel="stylesheet" href="assets/css/ogency.css" />
+    <link rel="stylesheet" href="assets/css/ogencyyellow.css" />
 </head>
 
 <body class="custom-cursor">
@@ -66,6 +66,7 @@
                             <li class="scrollToLink"><a href="talent-list.html">Talent list</a></li>
                             <li class="scrollToLink"><a href="blog-grid.html">Blog</a></li>
                             <li class="scrollToLink"><a href="contact.html">Contacto</a></li>
+                            <li class="scrollToLink"><a href="talent-asoc.html">Asociación para el talento</a></li>
                         </ul>
                     </div><!-- /.main-menu__nav -->
                 </div><!-- /.container -->
