--- a/talent-asoc.html
+++ b/talent-asoc.html
@@ -265,7 +265,7 @@
                     <div class="col-md-12">
                         <div class="section-title text-center">
                             <h5 class="section-title__tagline section-title__tagline--has-dots">our professional team</h5>
-                            <h2 class="section-title__title">Meet the team behind the<br> agency success</h2>
+                            <h2 class="section-title__title">Conoce a las personas detrás<br> de tu logro</h2>
                         </div><!-- section-title -->
                     </div>
                 </div>
