--- a/contact.html
+++ b/contact.html
@@ -153,7 +153,7 @@
                                 <div class="contact-info__item__icon"><span class="icon-place"></span></div>
                                 <h3 class="contact-info__item__title">Dirección</h3>
                                 <p class="contact-info__item__text">
-                                    Carrer de Pujades, 94, 96 <br>Sant Martí, Barcelona, España
+                                    Gran Via de les Corts <br>Catalanes 145, Sants-Montjuïc,<br> 08014 Barcelona
                                 </p>
                             </div>
                         </div>
@@ -172,7 +172,7 @@
                                 <div class="contact-info__item__icon"><span class="icon-schedule"></span></div>
                                 <h3 class="contact-info__item__title">Horario</h3>
                                 <p class="contact-info__item__text">
-                                    Lunes a Viernes: 8 a 18hs<br>
+                                    Lunes a Jueves: 9:00h a 18:00h<br>Viernes: 9:00h a 14:00h
                                 </p>
                             </div>
                         </div>
@@ -183,7 +183,7 @@
         <!--Contact Info End-->
         <!--Google Map Start-->
         <section class="google-map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2992.9822151692542!2d2.191051675534458!3d41.39619259544988!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a4a319e5a217b5%3A0x23eca3d199873416!2sCarrer%20de%20Pujades%2C%2094%2C%2096%2C%20Sant%20Mart%C3%AD%2C%2008005%20Barcelona!5e0!3m2!1ses!2ses!4v1736544229813!5m2!1ses!2ses" class="google-map__one" allowfullscreen></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2994.373992054592!2d2.1340613755328497!3d41.36595859732493!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a498998ea760f9%3A0x8998f006854833de!2sGran%20Via%20de%20les%20Corts%20Catalanes%2C%20145%2C%20Sants-Montju%C3%AFc%2C%2008014%20Barcelona!5e0!3m2!1ses!2ses!4v1737459497718!5m2!1ses!2ses" class="google-map__one" allowfullscreen></iframe>
         </section>
         <!--Google Map End-->
 
