--- a/talent-asoc.html
+++ b/talent-asoc.html
@@ -128,14 +128,7 @@
             </div>
         </section>
         <!-- About End -->
-        <!-- Sliding Text Start-->
-        <section class="slider-text-one">
-            <div class="slider-text-one__animate-text">
-                <span>Nuestros alumnos <span>&</span> Nuestros profesionales&nbsp;</span>
-                <span>Nuestros alumnos <span>&</span> Nuestros profesionales&nbsp;</span>
-            </div>
-        </section>
-        <!-- Sliding Text Start-->
+
         <!--Testimonial Start-->
         <section class="testimonial-three">
             <div class="container">
@@ -258,87 +251,6 @@
             </div>
         </section>
         <!--Testimonial End-->
-        <!-- Team Start -->
-        <section class="team-one team-two">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="section-title text-center">
-                            <h5 class="section-title__tagline section-title__tagline--has-dots">our professional team</h5>
-                            <h2 class="section-title__title">Conoce a los profesores detrás<br> de tu aprendizaje</h2>
-                        </div><!-- section-title -->
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-4 col-md-6 wow fadeInUp animated" data-wow-delay="100ms">
-                        <div class="team-one__item">
-                            <div class="team-one__item__image">
-                                <img src="assets/images/team/team-1-1.jpg" alt="ogency">
-                            </div><!-- /.team-image -->
-                            <div class="team-one__item__content">
-                                <span class="team-one__item__designation">Senior Developer</span><!-- /.team-designation -->
-                                <h3 class="team-one__item__title">
-                                    <a href="team-details.html">Mike hardson</a>
-                                </h3><!-- /.team-name -->
-                                <div class="team-one__item__social-wrapper">
-                                    <a class="team-one__item__links" href="#"><span class="fas fa-share-alt"></span></a><!-- /.social-more -->
-                                    <div class="team-one__item__social">
-                                        <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
-                                        <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
-                                        <a href="https://www.pinterest.com/"><i class="fab fa-pinterest-p"></i></a>
-                                        <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
-                                    </div><!-- /.team-social -->
-                                </div>
-                            </div><!-- /.team-content -->
-                        </div><!-- /.team-one -->
-                    </div>
-                    <div class="col-lg-4 col-md-6 wow fadeInUp animated" data-wow-delay="200ms">
-                        <div class="team-one__item">
-                            <div class="team-one__item__image">
-                                <img src="assets/images/team/team-1-2.jpg" alt="ogency">
-                            </div><!-- /.team-image -->
-                            <div class="team-one__item__content">
-                                <span class="team-one__item__designation">Content Writer</span><!-- /.team-designation -->
-                                <h3 class="team-one__item__title">
-                                    <a href="team-details.html">Aleesha brown</a>
-                                </h3><!-- /.team-name -->
-                                <div class="team-one__item__social-wrapper">
-                                    <a class="team-one__item__links" href="#"><span class="fas fa-share-alt"></span></a><!-- /.social-more -->
-                                    <div class="team-one__item__social">
-                                        <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
-                                        <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
-                                        <a href="https://www.pinterest.com/"><i class="fab fa-pinterest-p"></i></a>
-                                        <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
-                                    </div><!-- /.team-social -->
-                                </div>
-                            </div><!-- /.team-content -->
-                        </div><!-- /.team-one -->
-                    </div>
-                    <div class="col-lg-4 col-md-6 wow fadeInUp animated" data-wow-delay="300ms">
-                        <div class="team-one__item">
-                            <div class="team-one__item__image">
-                                <img src="assets/images/team/team-1-3.jpg" alt="ogency">
-                            </div><!-- /.team-image -->
-                            <div class="team-one__item__content">
-                                <span class="team-one__item__designation">Junior Developer</span><!-- /.team-designation -->
-                                <h3 class="team-one__item__title">
-                                    <a href="team-details.html">Kevin martin</a>
-                                </h3><!-- /.team-name -->
-                                <div class="team-one__item__social-wrapper">
-                                    <a class="team-one__item__links" href="#"><span class="fas fa-share-alt"></span></a><!-- /.social-more -->
-                                    <div class="team-one__item__social">
-                                        <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
-                                        <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
-                                        <a href="https://www.pinterest.com/"><i class="fab fa-pinterest-p"></i></a>
-                                        <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
-                                    </div><!-- /.team-social -->
-                                </div>
-                            </div><!-- /.team-content -->
-                        </div><!-- /.team-one -->
-                    </div>
-                </div>
-            </div>
-        </section>
 
         <footer class="main-footer" style="background-image: url(assets/images/backgrounds/footer-bg-1.png);">
             <div class="container">
@@ -361,8 +273,8 @@
                 <div class="row">
                     <div class="col-lg-8 col-md-6 wow fadeInUp animated" data-wow-delay="200ms">
                         <div class="main-footer__about">
-                            <p class="footer-widget__text">Impulsemos tu camino profesional</p>
-                            <a href="mailto:info@phimistersbschool.com">info@phimistersbschool.com</a>
+                            <p class="footer-widget__text">Conecta con la próxima generación de talento</p>
+                            <a href="mailto:info@asociacionparaeltalento.com">info@asociacionparaeltalento.com</a>
                         </div><!-- /.footer-widget -->
                     </div>
                     <div class="col-lg-2 col-md-3 wow fadeInUp animated" data-wow-delay="300ms">
