--- a/talent-asoc.html
+++ b/talent-asoc.html
@@ -134,7 +134,7 @@
             <div class="container">
                 <div class="section-title">
                     <h5 class="section-title__tagline section-title__tagline--has-dots">La red alumni</h5>
-                    <h2 class="section-title__title">Las opiniones  del<br> programa</h2>
+                    <h2 class="section-title__title">Las opiniones de partners</h2>
                 </div><!-- section-title -->
                 <div class="testimonial-three__carousel ogency-owl__carousel owl-theme owl-carousel" data-owl-options='{
             "items": 2,
