--- a/index.html
+++ b/index.html
@@ -110,10 +110,8 @@
                                     <div class="main-slider__two__content text-center">
                                         <div class="main-slider__two__dots"><span></span><span></span></div><!-- slider-dots -->
                                         <h2 class="main-slider__two__content__title">
-                                            DA TU SALTO<a href="https://www.youtube.com/watch?v=Get7rqXYrbQ" class="video-popup">
-                                                <img src="assets/images/backgrounds/video-bg-1-2.jpg" alt="ogency">
-                                                <span class="fa fa-play"></span>
-                                            </a>PROFESIONAL<a href="about.html" class="main-slider__two__btn"><span class="icon-down-right"></span></a><!-- slider-btn -->
+                                            ALWAYS READY.
+                                            NEVER ENOUGH.
                                         </h2><!-- slider-title -->
                                         <h3 class="h1"><br/></h3>
                                     </div>
@@ -198,11 +196,18 @@
                             <!-- about content start-->
                             <div class="section-title">
                                 <h5 class="section-title__tagline section-title__tagline--has-dots">Sobre nosotros</h5>
-                                <h2 class="section-title__title">Phimister Business School ¿Quiénes somos?</h2>
+                                <h2 class="section-title__title">¿Quiénes somos?</h2>
                             </div><!-- section-title -->
                             <p class="about-one__content__text-one">
-                                Phimister's Business School es una institución educativa comprometida con la formación de emprendedores líderes. Nuestra misión es empoderar a nuestros estudiantes con el conocimiento, las habilidades y la visión necesarios para afrontar los desafíos del mundo empresarial y convertir ideas en proyectos exitosos. Nos esforzamos por inspirar a la próxima generación de innovadores, fomentando la excelencia, el liderazgo y el espíritu emprendedor.</p>
-                        </div><!-- about content end-->
+                                Desde 1986, Phimister’s Business School ha evolucionado constantemente para ofrecer 
+                                formación de calidad. Comenzamos como un centro oficial de idiomas en Montcada i Reixac, 
+                                formando a más de 5.000 alumnos. En 1995, ampliamos nuestras instalaciones con la apertura 
+                                de Phimister’s School of English. En 2007, dimos un paso más allá incorporando formaciones 
+                                para empresas, y en 2021 lanzamos programas especializados en formación empresarial para 
+                                jóvenes. Ahora, en 2025, inauguramos nuestra nueva sede en Gran Vía de les Corts Catalanes, 
+                                reafirmando nuestro compromiso de seguir formando a las nuevas generaciones con un enfoque 
+                                práctico e innovador.                        
+                            </div><!-- about content end-->
                     </div>
                 </div>
             </div>
@@ -276,8 +281,8 @@
         <!-- Sliding Text Start-->
         <section class="slider-text-one">
             <div class="slider-text-one__animate-text">
-                <span>Phimister's business school<span>
-                <span>Phimister's business school<span>
+                <span>ALWAYS READY.<span>
+                <span>NEVER ENOUGH.<span>
             </div>
         </section>
         <!-- Sliding Text Start-->
